Avance Gestion Vehiculos

--- a/ambiente/semillero-hbt/semillero-padre/semillero-web/src/main/angular/src/app/nucleo/capa/principal/gestion_vehiculos/gestion_vehiculos.component.html
+++ b/ambiente/semillero-hbt/semillero-padre/semillero-web/src/main/angular/src/app/nucleo/capa/principal/gestion_vehiculos/gestion_vehiculos.component.html
@@ -2,8 +2,6 @@
 
 </app-vehiculos-filtros>
 
-<app-vehiculos-resultados 
-	[marca]="vehiculo.marca"
-	[placa]="vehiculo.placa">
+<app-vehiculos-resultados>
 </app-vehiculos-resultados>
 
