--- a/ambiente/semillero-hbt/semillero-padre/semillero-web/src/main/angular/src/app/nucleo/capa/principal/gestion_vehiculos/gestion_vehiculos.component.html
+++ b/ambiente/semillero-hbt/semillero-padre/semillero-web/src/main/angular/src/app/nucleo/capa/principal/gestion_vehiculos/gestion_vehiculos.component.html
@@ -1,7 +1,2 @@
-<app-vehiculos-filtros>
-
-</app-vehiculos-filtros>
-
-<app-vehiculos-resultados>
-</app-vehiculos-resultados>
+<app-vehiculos-filtros></app-vehiculos-filtros>
 
